--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,23 @@ ul {
 
 }
 
+.studio {
+  position: relative;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studio::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  left: 0;
+}
+
 .nav-main {
   display: flex;
   flex-direction: row;
@@ -62,6 +79,9 @@ ul {
 }
 
 .link {
+  font-family: "Roboto" sans-serif;
+  font-weight: 500;
+  font-size: 16px;
   text-decoration: none;
   padding: 24px 0;
 }
@@ -110,11 +130,20 @@ ul {
 .section-first {
   display: flex;
   flex-direction: column;
-  background-color: #2e2f42;
+  background-color: url(../images/Dark-bg.png);
   height: 600px;
   justify-content: center;
   align-items: center;
   padding: 188px 0;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)),
+    url(../images/people-office\ 1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
+  max-width: 1440px;
+
 }
 
 .section-first .container .header-main {
@@ -155,11 +184,26 @@ ul {
 }
 
 .section-two {
-  display: flex;
   background-color: #ffffff;
   padding: 120px 0;
+}
+
+.section-two .container {
+  padding: 0;
+  display: flex;
+  margin: auto;
+  max-width: 1158px;
+}
+
+.section-two-icons {
+  display: flex;
   align-items: center;
   justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
 }
 
 .visually-hidden {
@@ -177,12 +221,10 @@ ul {
 
 .mission-list {
   display: flex;
-  flex: 1;
   flex-direction: row;
   justify-content: center;
   gap: 24px;
   background-color: #fff;
-  max-width: 80%;
   margin: auto;
 }
 
@@ -214,6 +256,12 @@ ul {
   background-color: #f4f4fd;
 }
 
+.section-team .container {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
 .section-team-list {
   display: flex;
   flex-direction: row;
@@ -233,7 +281,6 @@ ul {
   background-color: #fff;
   border: 1px solid #e7e9fc;
   padding: 32px 0;
-
 }
 
 .team-header {
@@ -254,6 +301,8 @@ ul {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-name {
@@ -273,6 +322,41 @@ ul {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+}
+
+.section-team-social-list {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  gap: 24px;
+}
+
+.section-team-social-list-item {
+  width: 40px;
+  height: 40px;
+}
+
+.section-team-socail-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section-team-socail-link:hover {
+  background-color: #404bbf;
+}
+
+.section-team-socail-link:focus {
+  background-color: #404bbf;
+}
+
+.section-team-social-icon {
+  fill: #f4f4fd;
 }
 
 .section-portfolio {
@@ -302,8 +386,13 @@ ul {
 .portfolio-list {
   display: flex;
   flex-direction: column;
+  margin: auto;
   justify-content: space-between;
   width: calc((100% - 48px) / 3);
+}
+
+.portfolio-list:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-header {
@@ -326,8 +415,7 @@ ul {
 }
 
 .portfolio-img-card {
-  width: 100%;
-  height: 360px;
+  display: flex;
   border: 1px solid #e7e9fc;
 }
 
@@ -348,15 +436,64 @@ ul {
   color: #434455;
 }
 
+.portfolio-img-card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: #bdbdbd;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+
+  transform: translatey(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.portfolio-img-card:hover .overlay {
+  transform: translatey(0);
+}
+
+.overlay p {
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+
+}
+
 .footer {
-  display: flex;
-  flex-direction: column;
   padding: 100px 0;
   background-color: #2e2f42;
 }
 
 .footer .container {
+  display: flex;
+  margin: 0 auto;
   padding: 0;
+  max-width: 1128px;
+}
+
+.footer-box {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.footer-logo-container {
+  display: flex;
+  flex-direction: column;
+  margin-right: 120px;
 }
 
 .footer-link {
@@ -397,4 +534,47 @@ ul {
 
 .footer-link:focus {
   color: #404bbf;
+}
+
+.footer-social-container-header {
+  display: inline-block;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+  margin-top: 0;
+}
+
+.footer-social-container-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-container-list-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-container-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+}
+
+.footer-social-container-list-icon {
+  fill: #f4f4fd;
+}
+
+.footer-social-container-list-link:hover {
+  background-color: #31d0aa;
+}
+
+.footer-social-container-list-link:focus {
+  background-color: #31d0aa;
 }
