--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@ img {
   flex-direction: row;
   align-items: center;
   height: 72px;
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -38,7 +40,6 @@ ul {
 
 .studio {
   position: relative;
-
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -60,6 +61,10 @@ ul {
   align-items: center;
   height: 72px;
   width: 720px;
+}
+
+.nav-main .link.studio {
+  color: #404bbf;
 }
 
 .nav-list {
@@ -130,7 +135,7 @@ ul {
 .section-first {
   display: flex;
   flex-direction: column;
-  background-color: url(../images/Dark-bg.png);
+  background-color: #2e2f42;
   height: 600px;
   justify-content: center;
   align-items: center;
@@ -173,6 +178,7 @@ ul {
   letter-spacing: 0.04em;
   color: #ffffff;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-first:hover {
@@ -389,6 +395,7 @@ ul {
   margin: auto;
   justify-content: space-between;
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list:hover {
@@ -453,12 +460,12 @@ ul {
   height: 100%;
   background-color: #4d5ae5;
 
-  transform: translatey(100%);
-  transition: transform 250ms ease-in-out;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-img-card:hover .overlay {
-  transform: translatey(0);
+  transform: translateY(0%);
 }
 
 .overlay p {
