--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,8 @@ ul {
 }
 
 .section-portfolio {
+  display: flex;
+  justify-content: center;
   padding: 120px 0;
 }
 
@@ -381,18 +383,15 @@ ul {
 .section-portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   background-color: #fff;
   row-gap: 48px;
   column-gap: 24px;
   margin: auto;
-  padding: 0;
 }
 
 .portfolio-list {
-  display: flex;
   flex-direction: column;
-  margin: auto;
   justify-content: space-between;
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -444,31 +443,23 @@ ul {
 }
 
 .portfolio-img-card {
+  top: 0;
+  left: 0;
   position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  background-color: #bdbdbd;
   overflow: hidden;
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
+.portfolio-img-card-list {
   width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid #e7e9fc;
 }
 
-.portfolio-img-card:hover .overlay {
+.portfolio-img-card:hover .overlay-text {
   transform: translateY(0%);
 }
 
-.overlay p {
+.overlay-text {
+  position: absolute;
   top: 0;
   font-size: 16px;
   line-height: 1.5;
@@ -476,7 +467,10 @@ ul {
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
-
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer {
