--- a/css/styles.css
+++ b/css/styles.css
@@ -452,21 +452,28 @@ ul {
   border: 1px solid #e7e9fc;
 }
 
-.portfolio-img-card:hover .overlay-text {
-  transform: translateY(0%);
+.portfolio-img-card:hover p {
+  transform: translateY(0);
+}
+
+.overlay-container:hover p {
+  transform: translateY(0);
+}
+
+p {
+  height: 100%;
+  width: 100%;
 }
 
 .overlay-text {
   position: absolute;
-  top: 0;
+  top: 0%;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
