--- a/css/styles.css
+++ b/css/styles.css
@@ -474,6 +474,7 @@ ul {
   background-color: #4d5ae5;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0;
 }
 
 .footer {
