--- a/css/styles.css
+++ b/css/styles.css
@@ -468,8 +468,8 @@ ul {
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0;
