--- a/css/styles.css
+++ b/css/styles.css
@@ -416,29 +416,6 @@ ul {
 }
 
 .portfolio-img-card {
-  display: flex;
-  border: 1px solid #e7e9fc;
-}
-
-.portfolio-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 32px 16px;
-  background-color: #fff;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-
-.portfolio-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  margin-bottom: 16px;
-}
-
-.portfolio-img-card {
   position: relative;
   overflow: hidden;
 }
@@ -458,6 +435,7 @@ ul {
 
 .overlay-text {
   position: absolute;
+  top: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -469,6 +447,24 @@ ul {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0;
+}
+
+.portfolio-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 32px 16px;
+  background-color: #fff;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  margin-bottom: 16px;
 }
 
 .footer {
